// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Connection State Hook Generator generateConnectionStateHook generates useConnectionState hook 1`] = `
"/**
 * WebSocket connection state hook
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import { useState, useEffect } from "react";
import { getClient } from "../client";
import type { ConnectionState } from "../../orm/client";
export type { ConnectionState } from "../../orm/client";
/**
 * Hook to observe the WebSocket connection state.
 * 
 * Returns the current connection state of the realtime WebSocket.
 * Returns 'disconnected' if realtime is not configured.
 * 
 * @example
 * \`\`\`tsx
 * const state = useConnectionState();
 * // state: 'disconnected' | 'connecting' | 'connected' | 'reconnecting'
 * \`\`\`
 */
export function useConnectionState(): ConnectionState {
  const [state, setState] = useState<ConnectionState>(() => getClient().getConnectionState());
  useEffect(() => {
    const client = getClient();
    if (!client.isRealtimeEnabled) return;
    const unsubscribe = client.onConnectionStateChange(setState);
    return () => unsubscribe();
  }, []);
  return state;
}
"
`;

exports[`Subscription Barrel Generator generates barrel with subscription hooks and connection state 1`] = `
"/**
 * Subscription hooks barrel export
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */
export * from "./useContactSubscription";
export * from "./useProjectSubscription";
export * from "./useConnectionState";"
`;

exports[`Subscription Hook Generator generateSubscriptionHook generates subscription hook for Contact table 1`] = `
"/**
 * Subscription hook for Contact
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import { useEffect, useRef, useCallback } from "react";
import { useQueryClient } from "@tanstack/react-query";
import type { QueryClient } from "@tanstack/react-query";
import { getClient } from "../client";
import type { SubscriptionEvent, SubscriptionFieldMeta, Unsubscribe } from "../../orm/client";
import type { Contact } from "../../orm/input-types";
import { contactKeys } from "../query-keys";
export type { SubscriptionEvent, Unsubscribe } from "../../orm/client";
const SUBSCRIPTION_DOCUMENT = "subscription OnContactChanged {\\n  onContactChanged {\\n    event\\n    contact { __typename }\\n    timestamp\\n  }\\n}";
const FIELD_META: SubscriptionFieldMeta = {
  fieldName: "onContactChanged",
  tableName: "contact",
  dataFieldName: "contact"
};
export interface ContactSubscriptionOptions {
  onEvent: (event: SubscriptionEvent<Contact>) => void;
  onError?: (error: Error) => void;
  enabled?: boolean;
  invalidateQueries?: boolean;
}
/**
 * Subscription hook for Contact realtime events
 * 
 * Subscribes to realtime changes on the server and automatically
 * invalidates React Query cache when events are received.
 * 
 * @example
 * \`\`\`tsx
 * useContactSubscription({
 *   onEvent: (event) => {
 *     console.log(event.operation, event.data);
 *   },
 * });
 * \`\`\`
 */
export function useContactSubscription(options: ContactSubscriptionOptions): void {
  const queryClient = useQueryClient();
  const optionsRef = useRef(options);
  optionsRef.current = options;
  useEffect(() => {
    if (options.enabled === false) return;
    const client = getClient();
    if (!client.isRealtimeEnabled) return;
    const unsubscribe = client.subscribe(FIELD_META, SUBSCRIPTION_DOCUMENT, {}, {
      onEvent: event => {
        optionsRef.current.onEvent(event);
        if (optionsRef.current.invalidateQueries !== false) queryClient.invalidateQueries({
          queryKey: contactKeys.all
        });
      },
      onError: err => {
        optionsRef.current?.onError(err);
      }
    });
    return () => unsubscribe();
  }, [options.enabled, queryClient]);
}
"
`;

exports[`Subscription Hook Generator generateSubscriptionHook generates subscription hook for Project table 1`] = `
"/**
 * Subscription hook for Project
 * @generated by @constructive-io/graphql-codegen
 * DO NOT EDIT - changes will be overwritten
 */

import { useEffect, useRef, useCallback } from "react";
import { useQueryClient } from "@tanstack/react-query";
import type { QueryClient } from "@tanstack/react-query";
import { getClient } from "../client";
import type { SubscriptionEvent, SubscriptionFieldMeta, Unsubscribe } from "../../orm/client";
import type { Project } from "../../orm/input-types";
import { projectKeys } from "../query-keys";
export type { SubscriptionEvent, Unsubscribe } from "../../orm/client";
const SUBSCRIPTION_DOCUMENT = "subscription OnProjectChanged {\\n  onProjectChanged {\\n    event\\n    project { __typename }\\n    timestamp\\n  }\\n}";
const FIELD_META: SubscriptionFieldMeta = {
  fieldName: "onProjectChanged",
  tableName: "project",
  dataFieldName: "project"
};
export interface ProjectSubscriptionOptions {
  onEvent: (event: SubscriptionEvent<Project>) => void;
  onError?: (error: Error) => void;
  enabled?: boolean;
  invalidateQueries?: boolean;
}
/**
 * Subscription hook for Project realtime events
 * 
 * Subscribes to realtime changes on the server and automatically
 * invalidates React Query cache when events are received.
 * 
 * @example
 * \`\`\`tsx
 * useProjectSubscription({
 *   onEvent: (event) => {
 *     console.log(event.operation, event.data);
 *   },
 * });
 * \`\`\`
 */
export function useProjectSubscription(options: ProjectSubscriptionOptions): void {
  const queryClient = useQueryClient();
  const optionsRef = useRef(options);
  optionsRef.current = options;
  useEffect(() => {
    if (options.enabled === false) return;
    const client = getClient();
    if (!client.isRealtimeEnabled) return;
    const unsubscribe = client.subscribe(FIELD_META, SUBSCRIPTION_DOCUMENT, {}, {
      onEvent: event => {
        optionsRef.current.onEvent(event);
        if (optionsRef.current.invalidateQueries !== false) queryClient.invalidateQueries({
          queryKey: projectKeys.all
        });
      },
      onError: err => {
        optionsRef.current?.onError(err);
      }
    });
    return () => unsubscribe();
  }, [options.enabled, queryClient]);
}
"
`;
